...
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/gruppo"
        app:layout_constraintStart_toStartOf="@id/gruppo"
        app:layout_constraintEnd_toEndOf="@id/gruppo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="SCEGLI AREA\n IN CUI VUOI ACCEDERE"
        android:textAlignment="center"
...
