<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginTop="50dp"
    android:background="@color/colorBackground">

    <com.google.android.material.textfield.TextInputLayout
        style ="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Titolo"
        android:layout_marginBottom="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titoloSpesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lilita_one_regular"
            android:textColor="@color/colorOnBackground"
            android:textColorHint="@color/colorOnBackground" />
    </com.google.android.material.textfield.TextInputLayout>


    <EditText
        android:id="@+id/descrizioneSpesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Descrizione"
        android:textColor="@color/colorOnBackground"
        android:backgroundTint="@color/colorOnBackground"
        android:textColorHint="@color/colorOnBackground"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/DataSelezionata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Data"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            android:textColor="@color/colorOnBackground"
            android:backgroundTint="@color/colorOnBackground"
            android:textColorHint="@color/colorOnBackground"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/importoSpesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Importo"
        android:inputType="numberDecimal"
        android:textColor="@color/colorOnBackground"
        android:backgroundTint="@color/colorOnBackground"
        android:textColorHint="@color/colorOnBackground"
        />

    <AutoCompleteTextView
        android:id="@+id/categoriaSpesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Categoria"
        android:inputType="none"
        android:focusable="false"
        android:clickable="true"
        android:padding="8dp"
        android:textColor="@color/colorOnBackground"
        android:backgroundTint="@color/colorOnBackground"
        android:textColorHint="@color/colorOnBackground"
        />

    <Button
        android:id="@+id/btnAggiungiFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="📷 Aggiungi Foto"
        android:textColor="@color/colorOnPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginTop="12dp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/layoutGalleria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <Button
        android:id="@+id/btnConfermaSpesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Conferma Spesa"
        android:textColor="@color/colorOnPrimary"
        android:backgroundTint="@color/colorPrimary" />
</LinearLayout>
