...
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSpese"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnRipristinaFiltri"
        app:layout_constraintBottom_toTopOf="@+id/btnAggiungiSpesa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bottone aggiungi spesa -->
    <Button
        android:id="@+id/btnAggiungiSpesa"
...
